# Rhenium-OS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  cleanup_repo.py  contributors.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  nightly-perf.yml
artifacts/perf/: perfcard.md  report.json
benchmarks/perf/: schema_perf_results.json
docs/: README.md  architecture.md  cli_reference.md  clinical_procedures.md  configuration.md  index.md
docs/api/: core.md  dashboard_api.md  data.md  models.md  xai.md
docs/architecture/: architecture-overview.md  core-architecture.md  core-model.md  generative-and-pinns-architecture.md  medgemma-integration.md  mermaid-diagrams.md  modality-architecture-ct.md  modality-architecture-mri.md  modality-architecture-ultrasound.md  modality-architecture-xray.md  pipeline-architecture.md  xai-architecture.md
docs/benchmarks/: README.md  benchmark-plan.md  ct-benchmarks.md  modality-benchmarks.md  mri-benchmarks.md  organ-benchmarks.md  performance-methodology.md  us-benchmarks.md  xray-benchmarks.md
docs/evaluation/: benchmark-plans.md  metrics-mathematical-appendix.md
docs/getting-started/: installation.md  quickstart.md
docs/governance/: index.md
docs/math/: foundations.md
docs/modalities/: multi-modality-reference.md
docs/perf/: README.md  dashboard.md  diagrams.md  metrics.md  perfcard.md
docs/regulatory/: regulatory-overview.md
docs/team/: AI_AND_RHENIUM_OS_TEAM.md
docs/usage/: cli-guide.md  developer-guide.md
docs/user-guide/: data.md  generative.md  perception.md  reconstruction.md
docs/vision/: feature-taxonomy.md  vision.md
docs/xai/: xai-design-principles.md
java/: RheniumClient.java
notebooks/00_index/: 01_index_overview.ipynb  02_quickstart_clinical_and_ml_overview.ipynb
notebooks/10_architecture/: 03_architecture_rhenium_os_overview.ipynb  04_data_abstractions_and_types.ipynb  05_pipeline_configuration_and_orchestration.ipynb  06_disease_reasoning_presence_and_identity.ipynb  07_disease_reasoning_subtype_and_stage.ipynb  08_evidence_dossier_structure_and_save_load.ipynb  09_medgemma_integration_and_narratives.ipynb  10_cli_and_python_api_bridges.ipynb
notebooks/20_modality_mri/: 11_mri_data_loading_and_preprocessing.ipynb  12_mri_brain_tumor_segmentation_pipeline.ipynb  13_mri_ms_lesion_detection_pipeline.ipynb  14_mri_spine_degeneration_assessment.ipynb  15_mri_knee_msk_pipeline.ipynb  16_mri_multi_sequence_fusion_and_features.ipynb  17_mri_reconstruction_and_denoising.ipynb  18_mri_evidence_dossier_multistudy_example.ipynb
notebooks/21_modality_ct/: 19_ct_data_loading_and_windowing.ipynb  20_ct_lung_nodule_detection_pipeline.ipynb  21_ct_pe_support_pipeline.ipynb  22_ct_liver_lesion_staging_surrogates.ipynb  23_ct_abdomen_critical_findings_pipeline.ipynb  24_ct_spectral_features_and_maps.ipynb  25_ct_perfusion_parametric_maps.ipynb  26_ct_tumor_response_over_time.ipynb
notebooks/22_modality_ultrasound/: 27_ultrasound_data_loading_and_preprocessing.ipynb  28_echo_lv_function_and_segmentation.ipynb  29_ultrasound_abdominal_support_pipeline.ipynb  30_ultrasound_vascular_doppler_pipeline.ipynb  31_ultrasound_elastography_stiffness_maps.ipynb  32_pocus_focused_assessment_pipeline.ipynb
notebooks/23_modality_xray/: 33_xray_data_loading_and_metadata.ipynb  34_chest_xray_triage_and_xai.ipynb  35_msk_xray_fracture_detection.ipynb  36_mammography_lesion_support_pipeline.ipynb  37_dental_xray_tooth_and_caries_support.ipynb  38_xray_evidence_dossier_example.ipynb
notebooks/30_disease_use_cases/: 39_neuro_stroke_ct_mri_workflow.ipynb  40_neuro_ich_detection_and_flags.ipynb  41_neuro_brain_tumor_disease_reasoning.ipynb  42_neuro_neurodegeneration_volumetry.ipynb  43_neuro_ms_trajectory_analysis.ipynb  44_cardio_function_echo_mri_integration.ipynb  45_cardio_ct_coronary_support.ipynb  46_cardio_pulmonary_hypertension_surrogates.ipynb  47_cardio_heart_failure_phenotyping.ipynb  48_cardio_safety_flags_and_trajectory.ipynb  49_onco_lung_cancer_staging_surrogates.ipynb  50_onco_liver_cancer_trajectory.ipynb  51_onco_breast_cancer_multimodal_support.ipynb  52_onco_prostate_mri_disease_reasoning.ipynb  53_onco_whole_body_disease_burden.ipynb  54_msk_trauma_multisite_fracture_detection.ipynb  55_msk_osteoarthritis_joint_assessment.ipynb  56_msk_spine_degeneration_and_stenosis.ipynb  57_msk_sports_injury_assessment.ipynb  58_chest_infection_multimodal_support.ipynb  59_chest_ild_pattern_support.ipynb  60_chest_pe_ct_and_xray_context.ipynb  61_chest_covid_like_patterns.ipynb
notebooks/40_xai_and_dossiers/: 62_xai_methods_and_apis_overview.ipynb  63_xai_visual_saliency_and_gradcam.ipynb  64_xai_region_level_explanations.ipynb  65_xai_disease_level_linking.ipynb  66_evidence_dossiers_single_study.ipynb  67_evidence_dossiers_longitudinal_case.ipynb  68_medgemma_narrative_generation_control.ipynb  69_xai_quality_checks_and_sanity_tests.ipynb
notebooks/50_evaluation_and_benchmarks/: 70_evaluation_metrics_and_api_overview.ipynb  71_evaluation_segmentation_benchmarks.ipynb  72_evaluation_classification_benchmarks.ipynb  73_evaluation_detection_benchmarks.ipynb  74_evaluation_trajectory_benchmarks.ipynb  75_evaluation_imaging_quality_benchmarks.ipynb  76_evaluation_cross_modality_comparisons.ipynb  77_evaluation_reporting_and_export.ipynb
notebooks/60_fairness_and_bias/: 78_fairness_conceptual_overview.ipynb  79_fairness_demographic_stratification.ipynb  (+4 more)
ops/: README.md
ops/ci-cd/: ci-pipeline-outline.md
rhenium/: __init__.py
scripts/: demo_full_system.py  generate_notebooks.py  render_perf_dashboard.py  run_api.py  run_perf_benchmarks.py  start_server.py  verify_clinical.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_data.py  test_data_io.py  test_disease_integration.py  test_disease_types.py  test_evaluation.py  test_fairness.py  test_medgemma_adapter.py  test_models.py  test_pipelines.py  test_validators.py  test_xai.py
(+287 files in other folders)
