[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "rhenium-os"
version = "0.1.0"
description = "Skolyn Rhenium OS - State-of-the-Art AI Operating System for Diagnostic Medical Imaging"
readme = "README.md"
license = "EUPL-1.1"
authors = [
    { name = "Skolyn LLC", email = "engineering@skolyn.com" }
]
maintainers = [
    { name = "Skolyn Engineering", email = "engineering@skolyn.com" }
]
keywords = [
    "medical-imaging",
    "radiology",
    "artificial-intelligence",
    "deep-learning",
    "mri",
    "ct",
    "xray",
    "ultrasound",
    "dicom",
    "medgemma",
    "explainable-ai",
    "xai",
    "clinical-decision-support",
    "samd",
    "eu-mdr"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: European Union Public Licence 1.1 (EUPL 1.1)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pydicom>=2.4.0",
    "nibabel>=5.2.0",
    "SimpleITK>=2.3.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "monai>=1.3.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "h5py>=3.10.0",
    "pandas>=2.1.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "pillow>=10.1.0",
    "tqdm>=4.66.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
    "ipykernel>=6.28.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0"
]
training = [
    "pytorch-lightning>=2.1.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "albumentations>=1.3.0",
    "timm>=0.9.0"
]

[project.urls]
Homepage = "https://skolyn.com/rhenium-os"
Documentation = "https://docs.skolyn.com/rhenium-os"
Repository = "https://github.com/skolyn/rhenium-os"
Issues = "https://github.com/skolyn/rhenium-os/issues"
Changelog = "https://github.com/skolyn/rhenium-os/blob/main/CHANGELOG.md"

[project.scripts]
rhenium = "rhenium.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["rhenium"]

[tool.hatch.build.targets.sdist]
include = [
    "/rhenium",
    "/tests",
    "/docs"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "pydicom.*",
    "nibabel.*",
    "SimpleITK.*",
    "monai.*",
    "h5py.*",
    "scipy.*",
    "skimage.*",
    "sklearn.*",
    "cv2.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF"     # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913" # too many arguments
]

[tool.ruff.isort]
known-first-party = ["rhenium"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["rhenium"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]
