[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "rhenium-os"
version = "0.1.0"
description = "Multi-Modality AI Platform for Medical Imaging Research"
readme = "README.md"
license = "EUPL-1.1"
requires-python = ">=3.10"
authors = [
    { name = "Rhenium OS Team" }
]
keywords = [
    "medical-imaging",
    "deep-learning",
    "radiology",
    "mri",
    "ct",
    "ultrasound",
    "xray",
    "segmentation",
    "reconstruction",
    "pinn",
    "gan",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: European Union Public Licence 1.1 (EUPL 1.1)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pydicom>=2.4.0",
    "nibabel>=5.2.0",
    "SimpleITK>=2.3.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "monai>=1.3.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "h5py>=3.10.0",
    "pandas>=2.1.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "pillow>=10.1.0",
    "tqdm>=4.66.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
    "ipykernel>=6.28.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
training = [
    "pytorch-lightning>=2.1.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "albumentations>=1.3.0",
    "timm>=0.9.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]
perf = [
    "psutil>=5.9.0",
]
all = ["rhenium-os[dev,docs,training,server,perf]"]


[project.scripts]
rhenium = "rhenium.cli.main:app"

[project.urls]
Repository = "https://github.com/rhenium-os/rhenium-os"
Documentation = "https://rhenium-os.github.io/rhenium-os"

[tool.hatch.build.targets.wheel]
packages = ["src/rhenium"]

[tool.hatch.build.targets.sdist]
include = ["src/rhenium", "tests", "docs", "README.md", "LICENSE", "NOTICE"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external resources",
    "gpu: tests requiring GPU acceleration",
    "smoke: fast benchmark subset for CI (~50 tests)",
    "bench: full benchmark matrix (576+ tests)",
    "perf_smoke: fast performance benchmark subset (~20 tests)",
    "perf: full performance benchmark suite (50+ tests)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
show_error_codes = true
exclude = ["tests/", "docs/", "build/"]

[[tool.mypy.overrides]]
module = [
    "pydicom.*",
    "nibabel.*",
    "SimpleITK.*",
    "monai.*",
    "h5py.*",
    "scipy.*",
    "skimage.*",
    "sklearn.*",
    "cv2.*",
    "albumentations.*",
    "timm.*",
    "wandb.*",
    "tensorboard.*",
]
ignore_missing_imports = true

# ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments (common in ML)
    "PLR2004",  # magic value comparison
]

[tool.ruff.isort]
known-first-party = ["rhenium"]
force-single-line = false

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]

# black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
)/
'''

# coverage configuration
[tool.coverage.run]
source = ["src/rhenium"]
branch = true
omit = ["*/testing/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
